spade-tests/src/snapshots/spade_tests__errors__type_error_has_replacements_applied.snap
---
source: spade-tests/src/errors.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected type 9, got 8
   ┌─ testinput:12:13
   │
12 │             x + 1
   │             ^^^^^ Expected 9 here


